--- a/Last.fm-Scrubbler-WPF/App.xaml
+++ b/Last.fm-Scrubbler-WPF/App.xaml
@@ -2,8 +2,5 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Last.fm_Scrubbler_WPF"
-             StartupUri="MainWindow.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
+             StartupUri="Views/MainView.xaml">
 </Application>
