Manual Scrobble Properties

--- a/Last.fm-Scrubbler-WPF/Views/MainView.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/MainView.xaml
@@ -17,7 +17,7 @@
 
     <TabControl Grid.Row="0">
       <TabItem Header="Manual Scrobble">
-        <views:ManualScrobbleView/>
+        <views:ManualScrobbleView DataContext="{Binding ManualScrobbleViewModel}"/>
       </TabItem>
     </TabControl>
 
