--- a/Last.fm-Scrubbler-WPF/Views/FriendScrobbleView.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/FriendScrobbleView.xaml
@@ -32,10 +32,10 @@
     </Grid.ColumnDefinitions>
 
     <Label Grid.Row="0" Grid.Column="0" Content="Username:"/>
-    <TextBox Grid.Row="0" Grid.Column="2" Text="{Binding Username}"/>
+    <TextBox Grid.Row="0" Grid.Column="2" Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}"/>
     <Label Grid.Row="0" Grid.Column="4" Content="Amount:"/>
     <xctk:IntegerUpDown Grid.Row="0" Grid.Column="6" Value="{Binding Amount}"/>
-    <Button Grid.Row="0" Grid.Column="8" Content="Fetch">
+    <Button Grid.Row="0" Grid.Column="8" Content="Fetch" IsEnabled="{Binding CanFetch}">
       <i:Interaction.Triggers>
         <i:EventTrigger EventName="Click">
           <cal:ActionMessage MethodName="FetchScrobbles"/>
