--- a/Last.fm-Scrubbler-WPF/App.xaml
+++ b/Last.fm-Scrubbler-WPF/App.xaml
@@ -1,6 +1,14 @@
 ﻿<Application x:Class="Last.fm_Scrubbler_WPF.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Last.fm_Scrubbler_WPF"
-             StartupUri="Views/MainView.xaml">
+             xmlns:local="clr-namespace:Last.fm_Scrubbler_WPF">
+  <Application.Resources>
+    <ResourceDictionary>
+      <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary>
+          <local:AppBootstrapper x:Key="bootstrapper" />
+        </ResourceDictionary>
+      </ResourceDictionary.MergedDictionaries>
+    </ResourceDictionary>
+  </Application.Resources>
 </Application>
