Changed MainVIew title to "Last.fm Scrubbler"

--- a/Last.fm-Scrubbler-WPF/Views/MainView.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/MainView.xaml
@@ -8,7 +8,7 @@
         xmlns:local="clr-namespace:Last.fm_Scrubbler_WPF"
         xmlns:views="clr-namespace:Last.fm_Scrubbler_WPF.Views"
         mc:Ignorable="d"
-        Title="MainView" Height="350" Width="525" Icon="..\scrubbler_64.ico">
+        Title="Last.fm Scrubbler" Height="350" Width="525" Icon="..\scrubbler_64.ico">
   <Grid>
     <Grid.RowDefinitions>
       <RowDefinition Height="*"/>
