--- a/Last.fm-Scrubbler-WPF/Views/TrackResultView.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/TrackResultView.xaml
@@ -19,13 +19,40 @@
       <RowDefinition Height="*"/>
     </Grid.RowDefinitions>
 
-    <Button Grid.Row="0" Content="Back To Releases" HorizontalAlignment="Left">
-      <i:Interaction.Triggers>
-        <i:EventTrigger EventName="Click">
-          <cal:ActionMessage MethodName="BackToReleases"/>
-        </i:EventTrigger>
-      </i:Interaction.Triggers>
-    </Button>
+    <Grid>
+      <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="Auto"/>
+        <ColumnDefinition Width="5"/>
+        <ColumnDefinition Width="Auto"/>
+        <ColumnDefinition Width="5"/>
+        <ColumnDefinition Width="Auto"/>
+      </Grid.ColumnDefinitions>
+
+      <Button Grid.Row="0" Content="Back To Releases">
+        <i:Interaction.Triggers>
+          <i:EventTrigger EventName="Click">
+            <cal:ActionMessage MethodName="BackToReleases"/>
+          </i:EventTrigger>
+        </i:Interaction.Triggers>
+      </Button>
+
+      <Button Grid.Column="2" Content="Select ALL" IsEnabled="{Binding CanSelectAllTracks}">
+        <i:Interaction.Triggers>
+          <i:EventTrigger EventName="Click">
+            <cal:ActionMessage MethodName="SelectAllTracks"/>
+          </i:EventTrigger>
+        </i:Interaction.Triggers>
+      </Button>
+
+      <Button Grid.Column="4" Content="Select NONE" IsEnabled="{Binding CanSelectNoneTracks}">
+        <i:Interaction.Triggers>
+          <i:EventTrigger EventName="Click">
+            <cal:ActionMessage MethodName="SelectNoneTracks"/>
+          </i:EventTrigger>
+        </i:Interaction.Triggers>
+      </Button>
+    </Grid>
+
 
     <ListView Grid.Row="2" VerticalAlignment="Stretch" ItemsSource="{Binding FetchedTracks}">
       <ListView.View>
