--- a/Last.fm-Scrubbler-WPF/Views/ManualScrobbleView.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/ManualScrobbleView.xaml
@@ -6,6 +6,7 @@
              xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
              xmlns:cal="http://www.caliburnproject.org"
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+             xmlns:viewModels="clr-namespace:Last.fm_Scrubbler_WPF.ViewModels"
              xmlns:local="clr-namespace:Last.fm_Scrubbler_WPF.Views"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
@@ -41,7 +42,7 @@
     <TextBox Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="3" Text="{Binding Album, UpdateSourceTrigger=PropertyChanged}"/>
 
     <Label Grid.Row="6" Grid.Column="0" Content="Time Played:"/>
-    <xctk:DateTimePicker Grid.Row="6" Grid.Column="2" Value="{Binding TimePlayed}"/>
+    <xctk:DateTimePicker Grid.Row="6" Grid.Column="2" Value="{Binding TimePlayed}" Minimum="{Binding Source={x:Static viewModels:MainViewModel.MinimumDateTime}}"/>
     <CheckBox Grid.Row="6" Grid.Column="4" Content="Current" IsChecked="{Binding CurrentDateTime}"
                     VerticalAlignment="Center"/>
 
