--- a/Last.fm-Scrubbler-WPF/Views/FriendScrobbleView.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/FriendScrobbleView.xaml
@@ -49,7 +49,7 @@
       </i:Interaction.Triggers>
     </Button>
 
-    <Grid Grid.Row="2">
+    <Grid Grid.Row="2" Grid.ColumnSpan="9">
       <Grid.ColumnDefinitions>
         <ColumnDefinition Width="Auto"/>
         <ColumnDefinition Width="5"/>
