--- a/Last.fm-Scrubbler-WPF/Views/CSVScrobbleView.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/CSVScrobbleView.xaml
@@ -43,10 +43,10 @@
 
     <Label Grid.Row="0" Grid.Column="0" Content="CSV File:"/>
     <TextBox Grid.Row="0" Grid.Column="2" IsReadOnly="True" Text="{Binding CSVFilePath, Mode=OneWay}"/>
-    <Button Grid.Row="0" Grid.Column="4" Content="Load">
+    <Button Grid.Row="0" Grid.Column="4" Content="Load" IsEnabled="{Binding EnableControls}">
       <i:Interaction.Triggers>
         <i:EventTrigger EventName="Click">
-          <cal:ActionMessage MethodName="LoadCSVFile"/>
+          <cal:ActionMessage MethodName="LoadCSVFileDialog"/>
         </i:EventTrigger>
       </i:Interaction.Triggers>
     </Button>
@@ -58,14 +58,14 @@
         <ColumnDefinition Width="Auto"/>
       </Grid.ColumnDefinitions>
 
-      <Button Grid.Column="0" Content="Select ALL">
+      <Button Grid.Column="0" Content="Select ALL" IsEnabled="{Binding EnableControls}">
         <i:Interaction.Triggers>
           <i:EventTrigger EventName="Click">
             <cal:ActionMessage MethodName="SelectAll"/>
           </i:EventTrigger>
         </i:Interaction.Triggers>
       </Button>
-      <Button Grid.Column="2" Content="Select NONE">
+      <Button Grid.Column="2" Content="Select NONE" IsEnabled="{Binding EnableControls}">
         <i:Interaction.Triggers>
           <i:EventTrigger EventName="Click">
             <cal:ActionMessage MethodName="SelectNone"/>
@@ -123,10 +123,12 @@
         <RowDefinition Height="Auto"/>
         <RowDefinition Height="5"/>
         <RowDefinition Height="Auto"/>
-        <RowDefinition Height="5"/>
-        <RowDefinition Height="Auto"/>
       </Grid.RowDefinitions>
       <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="Auto"/>
+        <ColumnDefinition Width="5"/>
+        <ColumnDefinition Width="Auto"/>
+        <ColumnDefinition Width="5"/>
         <ColumnDefinition Width="Auto"/>
         <ColumnDefinition Width="5"/>
         <ColumnDefinition Width="*"/>
@@ -141,13 +143,17 @@
       </Button>
 
       <Label Grid.Column="0" Grid.Row="0" Content="Scrobble Mode:"/>
-      <ComboBox Grid.Column="2" Grid.Row="0" SelectedValue="{Binding ScrobbleMode}" ItemsSource="{Binding Source={StaticResource ScrobbleModeKeyDataProvider}}"/>
-      
-      <Label Grid.Column="0" Grid.Row="2" Content="Finishing time:" Visibility="{Binding ShowImportModeSettings, Converter={StaticResource boolToVis}}"/>
-      <xctk:DateTimePicker Grid.Column="2" Grid.Row="2" Visibility="{Binding ShowImportModeSettings, Converter={StaticResource boolToVis}}" Value="{Binding FinishingTime}"/>
+      <ComboBox Grid.Column="2" Grid.Row="0" SelectedValue="{Binding ScrobbleMode}" ItemsSource="{Binding Source={StaticResource ScrobbleModeKeyDataProvider}}"
+                IsEnabled="{Binding EnableControls}"/>
 
-      <Label Grid.Column="0" Grid.Row="4" Content="Duration per Song:"/>
-      <xctk:IntegerUpDown Grid.Column="2" Grid.Row="4" Minimum="1" Value="{Binding Duration}"/>
+      <Label Grid.Column="0" Grid.Row="2" Content="Finishing time:" Visibility="{Binding ShowImportModeSettings, Converter={StaticResource boolToVis}}"/>
+      <xctk:DateTimePicker Grid.Column="2" Grid.Row="2" Visibility="{Binding ShowImportModeSettings, Converter={StaticResource boolToVis}}"
+                           Value="{Binding FinishingTime}" Minimum="{Binding Source={x:Static viewModels:MainViewModel.MinimumDateTime}}"
+                           IsEnabled="{Binding EnableControls}"/>
+
+      <Label Grid.Column="4" Grid.Row="2" Content="Duration per Song (sec):" Visibility="{Binding ShowImportModeSettings, Converter={StaticResource boolToVis}}"/>
+      <xctk:IntegerUpDown Grid.Column="6" Grid.Row="2" Minimum="1" Value="{Binding Duration}"
+                          Visibility="{Binding ShowImportModeSettings, Converter={StaticResource boolToVis}}" IsEnabled="{Binding EnableControls}"/>
     </Grid>
 
   </Grid>
