Basic File Scrobbler implementation

--- a/Last.fm-Scrubbler-WPF/Views/MainView.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/MainView.xaml
@@ -28,6 +28,9 @@
       <TabItem Header="CSV Scrobble">
         <views:CSVScrobbleView DataContext="{Binding CSVScrobbleViewModel}"/>
       </TabItem>
+      <TabItem Header="File Scrobble">
+        <views:FileScrobbleView DataContext="{Binding FileScrobbleViewModel}"/>
+      </TabItem>
     </TabControl>
 
     <StatusBar Grid.Row="1">
